Add Expand list view with information about one classified face

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EmotionRecognition</string>
     <string name="pick_image_button">Загрузить изображение</string>
     <string name="result_text_view">Эмоция на изображении: </string>
+    <string name="classification_delimiter_text_view">-</string>
 </resources>
