--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">EmotionRecognition</string>
-    <string name="pick_image_button">Загрузить изображение</string>
+    <string name="pick_image_button">Выбрать изображение</string>
+    <string name="take_photo_button">Сделать фото</string>
     <string name="result_text_view">Эмоция на изображении: </string>
     <string name="classification_delimiter_text_view">-</string>
 </resources>
